Track current release of UCO
ONT-240 had been written stating that the UCO pointer would be "pointing
at branch `master`, representing UCO 0.3.0".  Since ONT-240 was
approved, UCO 0.4.0 was released.  From working with the example data
and developing the migration guide (ONT-131), the only affected change
found during the migration process thus far was a single property
adjusting its spelling to be camel case.  Given the lack of additional
migration issues from going to UCO 0.4.0 from UCO 0.3.0, this submodule
pointer will satisfy the "pointing at master" portion of the ONT-240
specification, rather than the "0.3.0" portion.

References:
* [ONT-131] Implement migration guide from CASE 0.1 examples to CASE 0.2.0
* [ONT-240] Begin examples Git repository as fork of casework/CASE repository

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dependencies/CASE"]
 	path = dependencies/CASE
 	url = https://github.com/casework/CASE.git
+[submodule "dependencies/UCO"]
+	path = dependencies/UCO
+	url = https://github.com/ucoProject/UCO.git
