Build validator pickle for CASE 0.4.0
References:
* [AC-137] Add per-CASE-version validation to CASE-Examples

--- a/dependencies/Makefile
+++ b/dependencies/Makefile
@@ -16,7 +16,8 @@ SHELL := /bin/bash
 top_srcdir := $(shell cd .. ; pwd)
 
 all: \
-  case-0.3.0.pkl
+  case-0.3.0.pkl \
+  case-0.4.0.pkl
 
 case-0.3.0.pkl: \
   $(top_srcdir)/.venv.done.log
@@ -27,11 +28,27 @@ case-0.3.0.pkl: \
 	    CASE-0.3.0/
 	mv _$@ $@
 
+case-0.4.0.pkl: \
+  $(top_srcdir)/.venv.done.log
+	source $(top_srcdir)/venv/bin/activate \
+	  && serialize \
+	    -c case-0.4.0 \
+	    -o _$@ \
+	    CASE-0.4.0/
+	mv _$@ $@
+
 check: \
-  case-0.3.0.pkl
+  case-0.3.0.pkl \
+  case-0.4.0.pkl
 	$(MAKE) \
 	  --directory CASE-0.3.0 \
+	  check
+	$(MAKE) \
+	  --directory CASE-0.4.0 \
 	  check
 	source $(top_srcdir)/venv/bin/activate \
 	  && describe \
 	    case-0.3.0.pkl
+	source $(top_srcdir)/venv/bin/activate \
+	  && describe \
+	    case-0.4.0.pkl
