--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,9 @@
 [submodule "dependencies/CASE-0.4.0/UCO"]
 	path = dependencies/CASE-0.4.0/UCO
 	url = https://github.com/ucoProject/UCO.git
+[submodule "dependencies/CASE-Utilities-Python"]
+	path = dependencies/CASE-Utilities-Python
+	url = https://github.com/casework/CASE-Utilities-Python
 [submodule "dependencies/UCO-Utility-Pre-0.7.0-Validator"]
 	path = dependencies/UCO-Utility-Pre-0.7.0-Validator
 	url = https://github.com/ucoProject/UCO-Utility-Pre-0.7.0-Validator.git
