Transcribe some Inference object illustrations from CP-33
This patch also drafts a development-practice document which might be
able to see further use.

References:
* (CP-33) CASE needs to provide an inference object

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/examples/illustrations/Makefile
+++ b/examples/illustrations/Makefile
@@ -16,6 +16,8 @@ SHELL := /bin/bash
 all:
 	$(MAKE) \
 	  --directory exif_data
+	$(MAKE) \
+	  --directory inference
 
 check:
 	$(MAKE) \
@@ -24,8 +26,14 @@ check:
 	$(MAKE) \
 	  --directory location \
 	  check
+	$(MAKE) \
+	  --directory inference \
+	  check
 
 clean:
+	@$(MAKE) \
+	  --directory inference \
+	  clean
 	@$(MAKE) \
 	  --directory exif_data \
 	  clean
