--- a/examples/illustrations/inference/src/README.md.in
+++ b/examples/illustrations/inference/src/README.md.in
@@ -6,12 +6,12 @@ This illustration includes example investigative questions that require inferenc
 {
  "@id": "inference-uuid",
  "@type": "Inference",
+ "basisEvidence": ["(objects forming the basis for inference)",
  "hypothesis": "(hypothesis object under consideration)",
  "usedMethod": "Reference to the defined process used to evaluate basisEvidence in light of the hypothesis",
  "evaluationType": "probability",
  "evidenceEvaluation": 0.95,
- "evidenceRationale": "The observations are compatible with simulated tests of the hypothesized action",
- "basisEvidence": ["(objects forming the basis for inference)"]
+ "evaluationRationale": "The observations are compatible with simulated tests of the hypothesized action"]
 }
 ```
 
