--- a/examples/illustrations/inference/src/README.md.in
+++ b/examples/illustrations/inference/src/README.md.in
@@ -89,3 +89,30 @@ Two inferences are referenced above (`kb:inference-839fcf98...` and `kb:inferenc
 The following table is the results of [this query](src/query-select-skeptic-difference.sparql).  "Supports A" is support for only the initial analyst's finding, "Supports B" is support for only the skeptic's finding.
 
 @QUERY_SELECT_SKEPTIC_DIFFERENCE_MD@
+
+## Example - Wiping
+
+*Observations*: Consider an example of a file named “abc.exe” that is a secure erase program which overwrites the content and name of selected files, rendering them unrecoverable. This program has the same hash value of the secure erase program called “sdelete.exe” which is freely available on the Internet. Observed file system patterns on the computer are compatible with  use of “sdelete.exe” (Name overwritten, Zeroed content). Dates in file system metadata of these files corresponding to dates of Registry entries (UserAssist) and Prefetch files recording use of “abc.exe” program.
+
+* Hypothesis 1: File wiping occurred 
+* Hypothesis 2: File wiping did not occur
+
+The following inferences can be stated in words as the observations are exceedingly more probable in light of Hypothesis 1 (wiping), rather than Hypothesis 2 (no wiping).
+
+```json
+@INFERENCE_FILE_WIPING_JSON@
+```
+
+## Example - Mass Deletion
+
+*Observations*: All of the previously existing directories that last contained files of interest are now in deleted state on the disks, but were recovered using forensic software. These directories are listed below along with their last accessed timestamp, which indicates when they changed to deleted state. These previously existing directories, and others under the same parent directory, all have last accessed dates on 17 April 2021. Entries in Recycle Bin for these files are dated 17 April 2021.
+
+* Hypothesis 1: A folder and all its contents were deleted on 17 April 2021 
+* Hypothesis 2: A folder and all its contents were not deleted on 17 April 2021
+
+The following inferences can be stated in words as the observations are exceedingly more probable in light of Hypothesis 1 (targeted and deliberate deletion), rather than Hypothesis 2 (not targeted and deliberate deletion)
+
+```json
+@INFERENCE_MASS_DELETION_JSON@
+```
+
