Change recursion pattern to enable Make's "-k" and "-j"
Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/examples/illustrations/Makefile
+++ b/examples/illustrations/Makefile
@@ -13,14 +13,24 @@
 
 SHELL := /bin/bash
 
+.PHONY: \
+  check-exif_data \
+  check-location
+
 all:
 	$(MAKE) \
 	  --directory exif_data
 
-check:
+check: \
+  check-exif_data \
+  check-location
+
+check-exif_data:
 	$(MAKE) \
 	  --directory exif_data \
 	  check
+
+check-location:
 	$(MAKE) \
 	  --directory location \
 	  check
