Start unit tests with message sent-time review
This patch adds a test to confirm the `message.json` example has
timestamps on all of its represented messages.

Reverting commit `acface3` yields this output from the test, showing
that patch fulfilled this test's PASS state.  End of shell transcript
follows:

```
>       assert expected == computed, "Message objects with IRIs in the 'computed' set do not have sent-times.  Please ensure this example has sent-times."
E       AssertionError: Message objects with IRIs in the 'computed' set do not have sent-times.  Please ensure this example has sent-times.
E       assert set() == {'http://exam...org/kb/post1'}
E         Extra items in the right set:
E         'http://example.org/kb/post1'
E         Full diff:
E         - {'http://example.org/kb/post1'}
E         + set()

test_message.py:50: AssertionError
=========================== short test summary info ============================
FAILED test_message.py::test_messages_have_sent_times - AssertionError: Messa...
============================== 1 failed in 1.75s ===============================
```

References:
* [AC-142] CASE-Example message.json should have all messages have sent
  times

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/examples/illustrations/message/Makefile
+++ b/examples/illustrations/message/Makefile
@@ -13,36 +13,14 @@
 
 SHELL := /bin/bash
 
-.PHONY: \
-  check-exif_data \
-  check-location \
-  check-message
+top_srcdir := $(shell cd ../../.. ; pwd)
 
 all:
-	$(MAKE) \
-	  --directory exif_data
 
 check: \
-  check-exif_data \
-  check-location \
-  check-message
-
-check-exif_data:
-	$(MAKE) \
-	  --directory exif_data \
-	  check
-
-check-location:
-	$(MAKE) \
-	  --directory location \
-	  check
-
-check-message:
-	$(MAKE) \
-	  --directory message \
-	  check
+  $(top_srcdir)/.venv.done.log
+	source $(top_srcdir)/venv/bin/activate \
+	  && pytest \
+	    --verbose
 
 clean:
-	@$(MAKE) \
-	  --directory exif_data \
-	  clean
