Have illustrations orchestration Makefile use single subdir list
References:
* [AC-207] Release CASE-Utilities-Python 0.3.0

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/examples/illustrations/Makefile
+++ b/examples/illustrations/Makefile
@@ -13,58 +13,44 @@
 
 SHELL := /bin/bash
 
-.PHONY: \
-  all-exif_data \
-  all-location \
-  all-message \
-  check-exif_data \
-  check-location \
-  check-message
+illustration_dirs := \
+  exif_data \
+  location \
+  message
+
+all_targets := $(foreach illustration_dir,$(illustration_dirs),all-$(illustration_dir))
+
+check_targets := $(foreach illustration_dir,$(illustration_dirs),check-$(illustration_dir))
+
+clean_targets := $(foreach illustration_dir,$(illustration_dirs),clean-$(illustration_dir))
 
 all: \
-  all-exif_data \
-  all-location \
-  all-message
+  $(all_targets)
 
-all-exif_data:
-	$(MAKE) \
-	  --directory exif_data
+.PHONY: \
+  all-% \
+  check-% \
+  clean-%
 
-all-location:
-	$(MAKE) \
-	  --directory location
-
-all-message:
-	$(MAKE) \
-	  --directory message
+all-%:
+	export x=$@ \
+	  && $(MAKE) \
+	    --directory $${x/all-}
 
 check: \
-  check-exif_data \
-  check-location \
-  check-message
+  $(check_targets)
 
-check-exif_data:
-	$(MAKE) \
-	  --directory exif_data \
-	  check
+check-%:
+	export x=$@ \
+	  && $(MAKE) \
+	    --directory $${x/check-} \
+	    check
 
-check-location:
-	$(MAKE) \
-	  --directory location \
-	  check
+clean: \
+  $(clean_targets)
 
-check-message:
-	$(MAKE) \
-	  --directory message \
-	  check
-
-clean:
-	@$(MAKE) \
-	  --directory exif_data \
-	  clean
-	@$(MAKE) \
-	  --directory location \
-	  clean
-	@$(MAKE) \
-	  --directory message \
-	  clean
+clean-%:
+	@export x=$@ \
+	  && $(MAKE) \
+	    --directory $${x/clean-} \
+	    clean
