--- a/examples/illustrations/message/Makefile
+++ b/examples/illustrations/message/Makefile
@@ -15,39 +15,32 @@ SHELL := /bin/bash
 
 top_srcdir := $(shell cd ../../.. ; pwd)
 
-RDF_TOOLKIT_JAR := $(top_srcdir)/dependencies/CASE-0.3.0/CASE/lib/rdf-toolkit.jar
-
-example_name := $(shell basename $$PWD)
+illustrations_srcdir := $(top_srcdir)/examples/illustrations
 
 all: \
-  $(example_name)_validation.ttl
+  all-review
 
-$(example_name)_validation.ttl: \
-  $(example_name).json \
-  $(RDF_TOOLKIT_JAR) \
-  $(top_srcdir)/.venv.done.log
-	source $(top_srcdir)/venv/bin/activate \
-	  && case_validate \
-	    --format turtle \
-	    --output __$@ \
-	    $< \
-	    ; rc=$$? ; test 0 -eq $$rc -o 1 -eq $$rc
-	test -s __$@
-	java -jar $(RDF_TOOLKIT_JAR) \
-	  --inline-blank-nodes \
-	  --source __$@ \
-	  --source-format turtle \
-	  --target _$@ \
-	  --target-format turtle
-	rm __$@
-	mv _$@ $@
+.PHONY: \
+  all-review \
+  check-review \
+  clean-review
+
+all-review:
+	$(MAKE) \
+	  --file $(illustrations_srcdir)/src/review.mk
 
 check: \
-  $(example_name)_validation.ttl
-	source $(top_srcdir)/venv/bin/activate \
-	  && pytest \
-	    --verbose
+  check-review
 
-clean:
-	@rm -f \
-	  $(example_name)_validation.ttl
+check-review:
+	$(MAKE) \
+	  --file $(illustrations_srcdir)/src/review.mk \
+	  check
+
+clean: \
+  clean-review
+
+clean-review:
+	@$(MAKE) \
+	  --file $(illustrations_srcdir)/src/review.mk \
+	  clean
