--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "dependencies/UCO-unstable"]
 	path = dependencies/UCO-unstable
 	url = https://github.com/ajnelson-nist/UCO.git
+[submodule "dependencies/CASE-develop"]
+	path = dependencies/CASE-develop
+	url = https://github.com/casework/CASE.git
+[submodule "dependencies/UCO-develop"]
+	path = dependencies/UCO-develop
+	url = https://github.com/ucoProject/UCO.git
