--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,15 +24,29 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - uses: actions/setup-java@v2
       with:
         distribution: 'adopt'
         java-version: '8'
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Start from clean state
+
+    - name: Start From clean state
       run: make clean
+
     - name: Run tests
       run: make check
+    
+    # Upload the TTL files for 
+    - name: Upload TTL Files
+      uses: actions/upload-artifact@v2
+      with:
+        name: ttl-files
+        path: |
+          dependencies/CASE-develop.ttl
+          dependencies/CASE-unstable.ttl
+
