Track "Unstable" branch of CASE
This patch adds tracking of an unofficial branch of CASE that is
necessary to do release engineering for UCO 0.8.0 and CASE 0.6.0.
Tracking policy, when defined, will align with the UCO-unstable tracking
point.

References:
* [UCO OC-217] (CP-107) Revise ontology IRI to be slash-based and drop IRI
  base
* [UCO OC-113] UCO Version 0.8.0
* [ONT-463] Release CASE 0.6.0

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "dependencies/UCO-develop"]
 	path = dependencies/UCO-develop
 	url = https://github.com/ucoProject/UCO.git
+[submodule "dependencies/CASE-unstable"]
+	path = dependencies/CASE-unstable
+	url = https://github.com/ajnelson-nist/CASE.git
