Fix build chain issues
These matters don't impact CI, but do affect those working on the local
command line.

* The top-level Makefile has its recipes sorted now.
* The top-level Makefile adds the dependencies directory to its `clean`
  rule, fixing workflow resets.
* The top-level Makefile will now use the dependencies done-flag for the
  `all` rule.

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/dependencies/Makefile
+++ b/dependencies/Makefile
@@ -48,3 +48,8 @@ CASE-unstable.ttl: \
 	    _$@ \
 	    $(case_unstable_ttls)
 	mv _$@ $@
+
+clean:
+	@rm -f \
+	  CASE-develop.ttl \
+	  CASE-unstable.ttl
