--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/casework/CASE-Utilities-Python
 [submodule "dependencies/UCO-unstable"]
 	path = dependencies/UCO-unstable
-	url = https://github.com/ajnelson-nist/UCO.git
+	url = https://github.com/ucoProject/UCO-Archive.git
 [submodule "dependencies/CASE-develop"]
 	path = dependencies/CASE-develop
 	url = https://github.com/casework/CASE.git
@@ -12,4 +12,4 @@
 	url = https://github.com/ucoProject/UCO.git
 [submodule "dependencies/CASE-unstable"]
 	path = dependencies/CASE-unstable
-	url = https://github.com/ajnelson-nist/CASE.git
+	url = https://github.com/casework/CASE-Archive.git
