Centralize with-src-dir Make recipes with include directive
Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/examples/illustrations/inference/Makefile
+++ b/examples/illustrations/inference/Makefile
@@ -11,37 +11,4 @@
 #
 # We would appreciate acknowledgement if the software is used.
 
-SHELL := /bin/bash
-
-top_srcdir := $(shell cd ../../.. ; pwd)
-
-all:
-	$(MAKE) \
-	  --directory src \
-	  normalize
-	$(MAKE) \
-	  --directory src
-	cp src/generated-README.md README.md
-	cp src/generated-inference.json inference.json
-
-check:
-	$(MAKE) \
-	  --directory src \
-	  generated-README.md \
-	  generated-inference.json
-	$(MAKE) \
-	  --directory src \
-	  check
-	diff \
-	  src/generated-inference.json \
-	  inference.json \
-	  || (echo "UPDATE:examples/illustrations/inference/Makefile:The generated inference.json does not match the Git-tracked inference.json.  If the above reported changes look fine, run 'cp src/generated-inference.json inference.json' to get a file ready to commit to Git." >&2 ; exit 1)
-	diff \
-	  src/generated-README.md \
-	  README.md \
-	  || (echo "UPDATE:examples/illustrations/inference/Makefile:The generated README.md does not match the Git-tracked README.md.  If the above reported changes look fine, run 'cp src/generated-README.md README.md' to get a file ready to commit to Git." >&2 ; exit 1)
-
-clean:
-	@$(MAKE) \
-	  --directory src \
-	  clean
+include ../src/illustration-basedir.mk
