--- a/examples/illustrations/cryptowallet/src/README.md.in
+++ b/examples/illustrations/cryptowallet/src/README.md.in
@@ -18,8 +18,12 @@ Participation by NIST in the creation of the documentation of mentioned software
 
 ## Example representations
 
-The proposed representation of cryptoaddress is illustrated using the seizure of assets from BitCoin address 1HQ3Go3ggs8pFnXuHVHRytPCq5fGG8Hbhx related to the Silk Road marketplace
-Reference: https://www.justice.gov/usao-ndca/press-release/file/1334771/download
+The proposed representation of cryptoaddress is illustrated using the seizure of assets from BitCoin address `1HQ3Go3ggs8pFnXuHVHRytPCq5fGG8Hbhx` related to the Silk Road marketplace.
+
+The seizure is documented here:
+
+* [https://www.justice.gov/usao-ndca/press-release/file/1334771/download](https://www.justice.gov/usao-ndca/press-release/file/1334771/download)
+   - Alternatively available here: [https://storage.courtlistener.com/recap/gov.uscourts.cand.368440/gov.uscourts.cand.368440.1.0.pdf](https://storage.courtlistener.com/recap/gov.uscourts.cand.368440/gov.uscourts.cand.368440.1.0.pdf)
 
 ```json
        {
